--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "solution": "nightwatch nightwatch/solution/tests/",
     "step1": "nightwatch nightwatch/step1/tests/",
     "step2": "nightwatch nightwatch/step2/tests/",
+    "step3": "nightwatch nightwatch/step3/tests/",
     "eject": "react-scripts eject"
   }
 }
